# apt-finder

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: ApartmentPanel.svelte  ComparisonTable.svelte  GeoSearch.svelte  Map.svelte  StatsPanel.svelte  api.js  store.svelte.js
src/: compute.rs  config.rs  db.rs  error.rs  main.rs  models.rs  state.rs
src/handlers/: apartments.rs  geocode.rs  mod.rs  stats.rs
src/services/: ai.rs  mod.rs  nominatim.rs  osrm.rs
